--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ecomm?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=ecomm@123
-
+spring.datasource.password=adi123
+server.port=8080
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
-
 logging.level.org.springframework.jdbc=DEBUG
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
