--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,13 @@ server.port=8080
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 logging.level.org.springframework.jdbc=DEBUG
-spring.mail.host=smtp.gmail.com
+spring.mail.properties.mail.smtp.connecttimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=ecomm-inventory@hotmail.com
+spring.mail.password=Inventory@123
+spring.mail.properties.mail.store.protocol=pop3
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smpt.auth=true
