Adds thymeleaf templates
Signed-off-by: AdiAkhileshSingh15 <adiakhilesh.singh.cse21@itbhu.ac.in>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.mail.password=Inventory@123
 spring.mail.properties.mail.store.protocol=pop3
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smpt.auth=true
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
